[tool.poetry]
name = "crawler-whey-protein-101"
version = "0.1.0"
description = ""
authors = ["ClaudioPontes <claudiohpontes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.1"
requests = "^2.32.3"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
